# labs_po

./: CMakeLists.txt  readme.md
.github/workflows/: cmake-ci.yml
cpplabs/lab1/: a.out  barrel.cpp  barrel.hpp  lab1.cpp  matrix.cpp  matrix.hpp  rect.cpp  rect.hpp
cpplabs/lab2/: Makefile
cpplabs/lab2/src/: BaseFile.cpp  BaseFile.hpp  lab2.cpp  mystring.cpp  mystring.hpp
cpplabs/lab2/tests/: comp.txt  compositiontest2  dublicate.txt  dynamicrle.rle  kitten.rle  newbase321.txt  test.rle  test.txt  test32sb.cpp  test_b32.txt  test_b32_rle.txt  test_b32x2.txt  test_base32file.cpp  test_base32file2.cpp  test_basefile.cpp  test_composition.cpp  test_rle.txt  test_rlefile.cpp  test_rlefile2.cpp
cpplabs/lab3/: Makefile
cpplabs/lab3/src/: BaseFile.cpp  BaseFile.hpp  boolarray.cpp  boolarray.hpp  lab3.cpp  matrix.cpp  matrix.hpp  mystring.cpp  mystring.hpp  notification.cpp  notification.hpp  notification_alt.cpp  notification_alt.hpp  notificationqueue.cpp  notificationqueue.hpp  workerdb.cpp  workerdb.hpp
cpplabs/lab4/: Makefile
cpplabs/lab4/src/: circle.cpp  circle.hpp  lab4.cpp
cpplabs/lab4/test/: test.txt
reports/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md
reports/coursework/: algorithm.md
src/: BaseFile.hpp  CMakeLists.txt  lab2.cpp
tests/: CMakeLists.txt  b32ftest.txt  kitten.rle  newbase321.txt  rftest.txt  test32.txt  test_b32.txt  test_composition.cpp  test_rle_b32.txt
